FIX: text on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -34,3 +34,9 @@
 
     min-height: 2000px;
 }
+
+@media screen and (max-width: 700px) {
+    #app {
+        text-align: center;
+    }
+}
